# zarr-vortex

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: micro_bench.rs
python/test/: test_zarr_vortex.py
python/zarr_vortex/: __init__.py
python/zarr_vortex/_lib/: __init__.pyi
src/: async_partial_decoder.rs  async_partial_encoder.rs  lib.rs  partial_decoder.rs  python.rs
